--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,39 @@
 ﻿@page "/"
-
+@using VETAPP.Data.services.Interfaces;
+@using static VETAPP.ViewModels.Models;
+@inject IUserService userService;
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
+@if (users != null && users.Count != 0)
+{
+    foreach (User user in users)
+    {
+        <p>
+            @user.FirstName @if (user.Pets != null && user.Pets.Count != 0)
+            {
+                <span>has @user.Pets.Count pets!</span>
+            }
+        </p>
+        if (user.Pets != null && user.Pets.Count != 0)
+        {
+            <ul>
+                @foreach (Pet pet in user.Pets)
+                {
+                    <li>@pet.PetName</li>
+                }
+            </ul>
+        }
+    }
+}
+else
+{
+    <p>Loading...</p>
+}
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+    List<User> users;
+    protected override async Task OnInitializedAsync()
+    {
+        users = await userService.GetAllUsersList();
+    }
+}
